Revision sent to LJ

--- a/template.tex
+++ b/template.tex
@@ -56,6 +56,7 @@ grestore
 \usepackage{algorithm,algorithmic}
 \usepackage{amsmath}
 \usepackage[numbers]{natbib}
+\usepackage{xcolor}
 
 \DeclareMathOperator*{\argmin}{argmin} % thin space, limits underneath in displays
 \DeclareMathOperator*{\myint}{int} %
@@ -134,15 +135,16 @@ Dose reduction in interventional CT is important both for patients and for the m
 Other imaging modalities used for interventional procedures include ultrasound, X-ray fluoroscopy and cone-beam CT.
 Ultrasound is a cost effective imaging solution. However, it only provides 2D cross sectional images with limited resolution and a low signal-to-noise ratio (SNR) \cite{sheafor2000comparison}. Although 3D/4D ultrasound imaging is becoming more available in recent years, its use is still limited in clinical practice.
 X-ray fluoroscopy offers improved spatial and intensity resolution, but is not suitable for procedures that require axial views or when complex anatomical relationships must be characterized in 3D during the intervention.
-Flat-panel cone-beam CT is a relatively new technology increasingly used in interventional radiology. However it has longer scan times and increased radiation scatter, resulting in increased artifacts compared to multi-detector CT \cite{orth2008cbct}. Recent advances have reduced scan times to 5-20 seconds, with a $times$2-3 radiation dose reduction \cite{dynact}.
+Flat-panel cone-beam CT is a relatively new technology increasingly used in interventional radiology. However it has longer scan times and increased radiation scatter, resulting in increased artifacts compared to multi-detector CT \cite{orth2008cbct}. Recent advances have reduced scan times to 5-20 seconds, with $\times$2-3 radiation dose reduction \cite{dynact}.
+\textcolor{red}{In general, mostly thanks to wide availability and ease of use, CT is preferred over other imaging modalities for many image guided interventions \cite{gupta2014ct}.}
 
 Dose reduction techniques for CT aim to achieve good image quality for a single, standalone scan acquisition. The most common radiation dose reduction technique is tube current modulation, in which the scan is acquired with a lower tube current. However, this technique decreases the scanning signal to noise ratio, which results in noise, lowered imaging contrast and resolution, and introduces imaging artifacts. Several methods have been developed to address these problems, including image denoising \cite{manduca2009projection} and image reconstruction with statistical noise models  \cite{zhang2016statistical,kim2015sparseview,niu2014sparse,liu2014total}. The radiation dose is typically x2-3 that of a full CT scan. 
 
-We have recently introduced a new approach to CT radiation dose reduction in situations in which a full baseline CT scan is available, as is usually the case in interventional CT procedures \cite{medan2017sparse, medan2017reduced}. In our approach, subsequent full dose scanning is replaced by fractional scanning, which consists of the selective acquisition of a sparse set of projection views. Fractional scanning reduces the radiation dose by modulating the current of the X-ray source during its rotation. By exploiting the projection space raw data, registration with the baseline scan and accurate localization of the needle tip in the repeat scans is achieved without reconstruction of the repeat scan image. This technique yields a x9-20 radiation dose reduction. However, this technique is of limited use, as it only tracks the needle tip and assumes that the needle is rigid. It does not take into account the needle bending during the insertion, which frequently occurs in common interventional procedures, e.g., lungs and liver biopsies with thin flexible needles. 
+We have recently introduced a new approach to CT radiation dose reduction in situations in which a full baseline CT scan is available, as is usually the case in interventional CT procedures \cite{medan2017sparse, medan2017reduced}. In our approach, subsequent full dose scanning is replaced by fractional scanning, which consists of the selective acquisition of a sparse set of projection views. Fractional scanning reduces the radiation dose by modulating the current of the X-ray source during its rotation. By exploiting the projection space raw data, registration with the baseline scan and accurate localization of the needle tip in the repeat scans is achieved without reconstruction of the repeat scan \text{red}{volumetric} image. This technique yields a x9-20 radiation dose reduction. However, this technique is of limited use, as it only tracks the needle tip and assumes that the needle is rigid. It does not take into account the needle bending during the insertion, which frequently occurs in common interventional procedures, e.g., lungs and liver biopsies with thin flexible needles. \textcolor{red}{The main novelty of this work is the extension of the method to allow localization of a flexible needle.}
 
 \section*{Previous work}
 Various methods have been recently developed to achieve accurate needle insertion with robotic actuators. The proposed methods focus on the mechanical modelling of the robotic system, the patient anatomy, and the needle trajectory planning, with less attention to needle localization from imaging modalities.
-Wu et al. \cite{wu2013automatic} and Engh et al. \cite{engh2010percutaneous} describe implementations of a bevel-tip needle steering methods using duty-cycle spinning of the needle that relies on the needle bending tendency due to asymmetry. Such systems model the needle/tissue interaction to execute a control sequence to follow a pre-planned trajectory. Image-based feedback is used as a means to allow corrections of the control sequence mid-insertion by adjusting the planned trajectory based on the actual needle trajectory.
+Wu et al. \cite{wu2013automatic} and Engh et al. \cite{engh2010percutaneous} describe implementations of bevel-tip needle steering methods using duty-cycle spinning of the needle that relies on the needle bending tendency due to asymmetry. Such systems model the needle/tissue interaction to execute a control sequence to follow a pre-planned trajectory. Image-based feedback is used as a means to allow corrections of the control sequence mid-insertion by adjusting the planned trajectory based on the actual needle trajectory.
 Ben-David et al. \cite{ben2018robotic} describe a robotic system for flexible needle insertion under CT guidance. A dual guiding mechanism consists of a driver unit that advances the needle and a positioning unit that steers the needle during the insertion. A pre-planned 3D trajectory is executed and corrected during the insertion based on full-dose repeat CT scans.
 Earlier work by Glozman et al. \cite{glozman2007image} describes robotic flexible needle steering and a needle-tissue mechanical interaction model. The steering feedback is based on 2D in-plane imaging of the needle.
 
@@ -159,8 +161,8 @@ In a different clinical application, Cong et al.  \cite{cong2015quantitative} sh
 
 We describe next a new method for flexible needle and patient localization in interventional CT procedures with fractional CT scanning. Our method starts by computing a sinogram-space rigid registration of the patient position in the CT scanner coordinate frame between the baseline CT scan without the needle, and a repeat scan with the needle while it is inserted. The repeat scan is performed by sparsely sampling the view angle domain (fractional scanning) and without reconstructing the CT image. The baseline scan is a full scan, sampled densely in the view angle domain. We use projection difference images computed by subtracting registered re-projected baseline scan images from the sparse set of repeat projection images. These images highlight the differences between the scans, e.g., the needle. The flexible needle trajectory is then traced in 3D space using the projection difference images. The main steps of our method are:
 \begin{enumerate}
-\item \textit{Fractional scanning}. A fractional repeat scan is acquired with the needle in place. The full baseline scan and fractional repeat scan are registered using our 3D Radon space rigid registration method \cite{medan2017sparse}. \\[0.05ex]
-\item \textit{Projection difference}. The projection difference images are computed by applying the rigid transformation obtained in the previous step to the baseline scan volume. The repeat scan images are obtained by forward projection and by subtracting them from the corresponding repeat scan projection images. The images are then homogenized by computing the gradient intensity image and normalizing by the local mean gradient intensity value to obtain an image in which the features of the projection difference have intensities on the same order of magnitude. \\[0.05ex]
+\item \textit{Fractional scanning}. A fractional repeat scan is acquired with the needle in place, \textcolor{red}{meaning that only a sparse set of view angles is acquired with the needle present during the repeat scan}. The full baseline scan and fractional repeat scan are registered using our 3D Radon space rigid registration method \cite{medan2017sparse}. \\[0.05ex]
+\item \textit{Projection difference}.\textcolor{red}{Projection difference images are computed as follows. First, the rigid transformation obtained in the previous step is applied to the baseline scan volume image, and the forward projections of the aligned baseline volume are computed, for view angles corresponding to the sparse set of repeat scan view angles. Then, projection difference images are obtained by subtracting the above-mentioned baseline projections from the corresponding repeat scan projections to obtain projection difference images. Since the presence of the needle is assumed to be the only physical difference between the two scans, it should appear as high-intensity pixels creating a curve in the projection difference images. These images are then post-processed by computing the gradient intensity image, and normalizing by the local mean gradient intensity value to obtain an image in which the features of the projection difference have intensities on the same order of magnitude (see Fig. \ref{proj_diff_fig}).} \\[0.05ex]
 \item \textit{Spherical marker localization}. The 3D localization of the spherical marker attached to the flexible needle at a known distance from the tip is computed using the resulting projection difference images.\\[0.1ex]
 \item \textit{Incremental flexible needle trajectory tracing}. The flexible needle trajectory is incrementally computed in 3D space using the projection difference images, starting from the center of the spherical marker obtained in the previous step. \\[0.05ex]
 \item \textit{Display/feedback}. The current location of the flexible needle with respect to the baseline scan 3D image is displayed and/or used as feedback for gradually driving the needle towards the target.
@@ -278,7 +280,7 @@ First, a scan of the empty scanner bed was acquired so that its sinogram can be 
 \begin{figure}[t]
 \centering
 \includegraphics[width=\textwidth]{projection_diff_images.png}
-\caption{Projection difference images for two views from one scan of the short flexible needle (left), and zoomed in on the needle in each image (right). The green crosses indicate the ground truth spherical marker center and the needle tip; the red dots indicate the landmark points computed by the incremental flexible needle trajectory algorithm.}
+\caption{\textcolor{red}{Normalized gradient magnitude of} projection difference images for two views from one scan of the short flexible needle (left), and zoomed in on the needle in each image (right). The green crosses indicate the ground truth spherical marker center and the needle tip; the red dots indicate the landmark points computed by the incremental flexible needle trajectory algorithm.}
 \label{proj_diff_fig}
 \end{figure}
 
@@ -286,9 +288,9 @@ The full baseline scan was registered to each sparse scan with the flexible need
 
 The spherical marker center ground truth coordinates was obtained by manual localization on the reconstructed images. The flexible needle trajectory ground truth was traced in 3D image space by manually placing landmark points on a volumetric difference image and then fitting them to a 3D cubic B\'ezier curve. The flexible needle tip ground truth location was defined as the point on the needle trace found at the known tip-marker distance. The flexible needle trajectory error was evaluated as the root-mean-squared distance of points along the fitted curve to the nearest point on the ground-truth B\'ezier curve.
 
-Table \ref{results_table} summarizes the results of the flexible needle tip localization for seven CT scans: four with the long needle (L1-4) and three with the short needle (S1-3). One of the scans (L3) yields a large tip localization error due to the needle trajectory being very close to in-plane with the axial plane (Fig. \ref{multislices_fig}). In our method, long needle segments that are in-plane lead to inaccurate estimation of the trajectory since the projections of such segments appear as horizontal lines in the projection difference images regardless of the orientation within the plane \cite{medan2017reduced}. Thus, in-plane needle insertion should be avoided to enable the recovery of the needle orientation as an intersection of non-parallel planes.
+Table \ref{results_table} summarizes the results of the flexible needle tip localization for seven CT scans: four with the long needle (L1-4) and three with the short needle (S1-3). One of the scans (L3) yields a large tip localization error due to the needle trajectory being very close to in-plane with the axial plane (Fig. \ref{multislices_fig}). In our method, long needle segments that are in-plane lead to inaccurate estimation of the trajectory since the projections of such segments appear as horizontal lines in the projection difference images regardless of the orientation within the plane, \textcolor{red}{which means that there is no unique solution to the inverse problem of the path reconstruction from projections in this degenerate case} \cite{medan2017reduced}. Thus, in-plane needle insertion should be avoided to enable the recovery of the needle orientation as an intersection of non-parallel planes.
 
-The running time of our implementation is 200-250 seconds on an Intel i7 CPU running un-optimized Matlab code. To allow our method to be used in a clinical setting, the code should be optimized and paralelized for GPU computations so as to reduce the running time to 2-5 seconds. The parallelization is achieved in the projection difference computation step by computing the projection difference images in parallel and in the subsequent landmark point additions.  
+The running time of our implementation is 200-250 seconds on an Intel i7 CPU running un-optimized Matlab code. To allow our method to be used in a clinical setting, the code should be optimized and parallelized for GPU computations so as to reduce the running time to 2-5 seconds. The parallelization is achieved in the projection difference computation step by computing the projection difference images in parallel and in the subsequent landmark point additions.  
 
 \section*{Discussion}
 
@@ -303,9 +305,11 @@ The key novelty of our method is the simultaneous tracking of a flexible needle 
 
 Note that the spherical marker that is attached to the flexible needle is unobtrusive and does not add a burden to the intervention work flow since it only requires attaching a spherical marker to the flexible needle by the medical staff before the intervention. The potential ten-fold reduction in radiation dose is much more substantial than that of existing methods, i.e. about $times$2-3 of a full scan. 
 
-{\em Method limitations}: our method is applicable to situations in which the patient anatomy baseline and repeat scans present minimal or no deformations and rigid registration can be used to align them. The scan field of view should include both the flexible needle and the spherical marker and should avoid in-plane needle insertion (an out-of-plane angle $>3^o$ suffices). 
+{\em Method limitations}: our method is applicable to situations in which the patient anatomy baseline and repeat scans present minimal or no deformations and rigid registration can be used to align them. 
+\textcolor{red}{Anatomical deformations could potentially be addressed in future work by extending the registration stage into a deformable registration algorithm between the repeat and baseline scans, relying on a low-dimensional parameter space to describe a global deformation field.}
+The scan field of view should include both the flexible needle and the spherical marker and should avoid in-plane needle insertion (an out-of-plane angle $>3^o$ suffices).
 
-{\em Study limitations:} the scope of our study is limited to several scans of an abdomen phantom. Fractional scanning is simulated from full scan data by omitting most of the repeat scan data used as input for the algorithm. To implement our method on a commercial CT scanner, fractional scanning can be achieved by fast modulation of the X-ray tube current and/or voltage, or by fast mechanical X-ray  collimation during scan acquisition. Fractional scanning can be realized by software (scanner controller), while collimation requires hardware development.  Both are beyond the scope of this work.
+{\em Study limitations:} the scope of our study is limited to several scans of an abdomen phantom. Fractional scanning is simulated from full scan data by omitting most of the repeat scan data used as input for the algorithm. To implement our method on a commercial CT scanner, fractional scanning can be achieved by fast modulation of the X-ray tube current and/or voltage, or by fast mechanical X-ray  collimation during scan acquisition. Fractional scanning can be realized by software (scanner controller), while collimation requires hardware development. Both are beyond the scope of this work.
  
 \section*{Conclusions}
 We have presented a new method for flexible needle and patient localization in interventional CT procedures based on fractional CT scanning.
