--- a/flexible_needle.bib
+++ b/flexible_needle.bib
@@ -11,7 +11,7 @@
 }
 
 @article{medan2017sparse,
-  title={Sparse {3D} {R}adon space rigid registration of {CT} scans: Method and validation study},
+  title={Sparse {3D} {R}adon space rigid registration of {CT} scans: {M}ethod and validation study},
   author={Medan, Guy and Shamul, N and Joskowicz, Leo},
   journal={IEEE transactions on medical imaging},
   volume={36},
@@ -314,6 +314,6 @@
 @misc{adelmanmsc2018,
   author = {Adelman, Zeev},
   title = {Reduced-dose region-of-interest image reconstruction in repeat CT scanning}, 
-year = {2019},
-  note = "Master Thesis, The Hebrew University of Jerusalem, Forthcoming."
+    year = {2018},
+  note = "Master Thesis, The Hebrew University of Jerusalem, Dec 2018."
 }
