--- a/template.tex
+++ b/template.tex
@@ -132,15 +132,15 @@ CT guidance is often used in interventional radiology procedures to help the sur
 %Dose reduction for physician
 Dose reduction in interventional CT is important both for patients and for the medical staff, since the time spent by physicians, nurses and technologists throughout their careers in the intervention suite necessarily involves exposure to ionizing radiation. While protection equipment is used by medical professionals, the cumulative exposure has been linked to an increased risk of cataracts and cancer \cite{miller2010occupational, sarti2012low}. In interventional CT, it is important to develop methods to prevent excessive dose exposure to the radiologist's hands \cite{stoeckelhuber2005radiation}.
 
-Other imaging modalities used for interventional procedures include ultrasound, X-ray fluoroscopy and cone-beam CT.
-Ultrasound is a cost effective imaging solution. However, it only provides 2D cross sectional images with limited resolution and a low signal-to-noise ratio (SNR) \cite{sheafor2000comparison}. Although 3D/4D ultrasound imaging is becoming more available in recent years, its use is still limited in clinical practice.
+Other imaging modalities used for interventional procedures include ultrasound, X-ray fluoroscopy and cone-beam CT \textcolor{red}{with or without optical or electromagnetic tracking.}
+Ultrasound is a cost effective imaging solution. However, it only provides 2D cross sectional images with limited resolution and a low signal-to-noise ratio (SNR) \cite{sheafor2000comparison}. Although 3D/4D ultrasound imaging is becoming more available in recent years, its use is still limited in clinical practice. \textcolor{red}{Moreover, it requires direct contact between the US probe and the patient body, and cannot ne used when imaging needle near or inside the lungs due to air.}
 X-ray fluoroscopy offers improved spatial and intensity resolution, but is not suitable for procedures that require axial views or when complex anatomical relationships must be characterized in 3D during the intervention.
 Flat-panel cone-beam CT is a relatively new technology increasingly used in interventional radiology. However it has longer scan times and increased radiation scatter, resulting in increased artifacts compared to multi-detector CT \cite{orth2008cbct}. Recent advances have reduced scan times to 5-20 seconds, with $\times$2-3 radiation dose reduction \cite{dynact}.
-\textcolor{red}{In general, mostly thanks to wide availability and ease of use, CT is preferred over other imaging modalities for many image guided interventions \cite{gupta2014ct}.}
+\textcolor{red}{Interventional CT procedures are very common, as they offer ease of use, superior image quality and 3D imaging \cite{gupta2014ct}.}
 
 Dose reduction techniques for CT aim to achieve good image quality for a single, standalone scan acquisition. The most common radiation dose reduction technique is tube current modulation, in which the scan is acquired with a lower tube current. However, this technique decreases the scanning signal to noise ratio, which results in noise, lowered imaging contrast and resolution, and introduces imaging artifacts. Several methods have been developed to address these problems, including image denoising \cite{manduca2009projection} and image reconstruction with statistical noise models  \cite{zhang2016statistical,kim2015sparseview,niu2014sparse,liu2014total}. The radiation dose is typically x2-3 that of a full CT scan. 
 
-We have recently introduced a new approach to CT radiation dose reduction in situations in which a full baseline CT scan is available, as is usually the case in interventional CT procedures \cite{medan2017sparse, medan2017reduced}. In our approach, subsequent full dose scanning is replaced by fractional scanning, which consists of the selective acquisition of a sparse set of projection views. Fractional scanning reduces the radiation dose by modulating the current of the X-ray source during its rotation. By exploiting the projection space raw data, registration with the baseline scan and accurate localization of the needle tip in the repeat scans is achieved without reconstruction of the repeat scan \text{red}{volumetric} image. This technique yields a x9-20 radiation dose reduction. However, this technique is of limited use, as it only tracks the needle tip and assumes that the needle is rigid. It does not take into account the needle bending during the insertion, which frequently occurs in common interventional procedures, e.g., lungs and liver biopsies with thin flexible needles. \textcolor{red}{The main novelty of this work is the extension of the method to allow localization of a flexible needle.}
+We have recently introduced a new approach to CT radiation dose reduction in situations in which a full baseline CT scan is available, as is usually the case in interventional CT procedures \cite{medan2017sparse, medan2017reduced}. In our approach, subsequent full dose scanning is replaced by fractional scanning, which consists of the selective acquisition of a sparse set of projection views. Fractional scanning reduces the radiation dose by modulating the current of the X-ray source during its rotation. By exploiting the projection space raw data, registration with the baseline scan and accurate localization of the needle tip in the repeat scans is achieved without reconstruction of the repeat scan \text{red}{volumetric} image. This technique yields a x9-20 radiation dose reduction. However, this technique is of limited use, as it only tracks the needle tip and assumes that the needle is rigid. It does not take into account the needle bending during the insertion, which frequently occurs in common interventional procedures, e.g., lungs and liver biopsies with thin flexible needles. \textcolor{red}{The advantages of our CT-based solutions over the existing procedure and over other modalities are: 1) no need of external tracking with its associated equipment and markers; 2) minimal modification of the current interventional CT workflow; 3) a simple and inexpensive sphere added to the needle; 4) no need for in-plane needle imaging.}
 
 \section*{Previous work}
 Various methods have been recently developed to achieve accurate needle insertion with robotic actuators. The proposed methods focus on the mechanical modelling of the robotic system, the patient anatomy, and the needle trajectory planning, with less attention to needle localization from imaging modalities.
@@ -150,8 +150,7 @@ Earlier work by Glozman et al. \cite{glozman2007image} describes robotic flexibl
 
 Most works in needle localization from medical images use ultrasound as the imaging modality for localization. Vrooijink et al. \cite{vrooijink2013real} describe a robotics system that positions a 2D ultrasound transducer perpendicular to the needle tip. In this system, needle-induced image artifacts are used to localize the needle tip in the imaged plane. The ultrasound transducer is continuously re-positioned to maintain its orientation relative to the needle tip. An approach combining ultrasound and X-ray imaging is presented in \cite{marinetto2017integration}. In this approach, a free-hand ultrasound probe and a fluoroscopic C-arm are registered using an external optical tracker to produce a fused image in which the needle can be localized and tracked.
 
-Several works describe specific methods to localize the needle trajectory in reconstructed CT images. The authors have developed in previous work a method to 
-localize the tip of a straight rigid needle \cite{medan2017reduced}. The needle tip  is computed from 2D projection images in sinogram space. 
+Several works describe specific methods to localize the needle trajectory in reconstructed CT images. The authors have developed in previous work a method to localize the tip of a straight rigid needle \cite{medan2017reduced}. The needle tip  is computed from 2D projection images in sinogram space. 
 Hou et al. \cite{huo2015shape} reconstruct the bevel-tip flexible needle trajectory from full CT slices by localizing 3D points at which the needle intersects slice planes and fitting a fourth-order polynomial to the resulting points set.
 Yaniv et al. \cite{yaniv2010needle} describe a system in which embedded electromagnetic fiducials are used for needle tracking under CT guidance. In-situ manual identification by the operator of the needle tip in a full-dose CT scan is required. Note that these methods rely on the acquisition of a full repeat CT scan and on the reconstruction of the image for each localization of the needle, with the ensuing radiation dose cost to the patient and the staff.
 
@@ -161,8 +160,8 @@ In a different clinical application, Cong et al.  \cite{cong2015quantitative} sh
 
 We describe next a new method for flexible needle and patient localization in interventional CT procedures with fractional CT scanning. Our method starts by computing a sinogram-space rigid registration of the patient position in the CT scanner coordinate frame between the baseline CT scan without the needle, and a repeat scan with the needle while it is inserted. The repeat scan is performed by sparsely sampling the view angle domain (fractional scanning) and without reconstructing the CT image. The baseline scan is a full scan, sampled densely in the view angle domain. We use projection difference images computed by subtracting registered re-projected baseline scan images from the sparse set of repeat projection images. These images highlight the differences between the scans, e.g., the needle. The flexible needle trajectory is then traced in 3D space using the projection difference images. The main steps of our method are:
 \begin{enumerate}
-\item \textit{Fractional scanning}. A fractional repeat scan is acquired with the needle in place, \textcolor{red}{meaning that only a sparse set of view angles is acquired with the needle present during the repeat scan}. The full baseline scan and fractional repeat scan are registered using our 3D Radon space rigid registration method \cite{medan2017sparse}. \\[0.05ex]
-\item \textit{Projection difference}.\textcolor{red}{Projection difference images are computed as follows. First, the rigid transformation obtained in the previous step is applied to the baseline scan volume image, and the forward projections of the aligned baseline volume are computed, for view angles corresponding to the sparse set of repeat scan view angles. Then, projection difference images are obtained by subtracting the above-mentioned baseline projections from the corresponding repeat scan projections to obtain projection difference images. Since the presence of the needle is assumed to be the only physical difference between the two scans, it should appear as high-intensity pixels creating a curve in the projection difference images. These images are then post-processed by computing the gradient intensity image, and normalizing by the local mean gradient intensity value to obtain an image in which the features of the projection difference have intensities on the same order of magnitude (see Fig. \ref{proj_diff_fig}).} \\[0.05ex]
+\item \textit{Fractional scanning}. A fractional repeat scan is acquired with the needle in place, \textcolor{red}{A fractional repeat scan is acquired with the needle in place, meaning that only a sparse set of view angles is acquired with the needle present during the repeat scan.}. The full baseline scan and fractional repeat scan are registered using our 3D Radon space rigid registration method \cite{medan2017sparse}. \\[0.05ex]
+\item \textit{Projection difference}.\textcolor{red}{Projection difference images are computed as follows. First, the rigid transformation obtained in the previous step is applied to the baseline scan volume image, and the forward projections of the aligned baseline volume are computed for the view angles corresponding to the sparse set of repeat scan view angles. Then, projection difference images are obtained by subtracting the above-mentioned baseline projections from the corresponding repeat scan projections to obtain projection difference images. Since the presence of the needle is assumed to be the only physical difference between the two scans, it should appear as high-intensity pixels creating a curve in the projection difference images. These images are then post-processed by computing the gradient intensity image, and normalizing by the local mean gradient intensity value to obtain an image in which the features of the projection difference have intensities on the same order of magnitude. (see Fig. \ref{proj_diff_fig}).} \\[0.05ex]
 \item \textit{Spherical marker localization}. The 3D localization of the spherical marker attached to the flexible needle at a known distance from the tip is computed using the resulting projection difference images.\\[0.1ex]
 \item \textit{Incremental flexible needle trajectory tracing}. The flexible needle trajectory is incrementally computed in 3D space using the projection difference images, starting from the center of the spherical marker obtained in the previous step. \\[0.05ex]
 \item \textit{Display/feedback}. The current location of the flexible needle with respect to the baseline scan 3D image is displayed and/or used as feedback for gradually driving the needle towards the target.
@@ -301,7 +300,7 @@ The running time of our implementation is 200-250 seconds on an Intel i7 CPU run
 \label{multislices_fig}
 \end{figure*}
 
-The key novelty of our method is the simultaneous tracking of a flexible needle and the registration of the patient location with respect to a baseline scan by fractional scanning, which precludes the reconstruction of the scanned image.  The computed flexible needle location can be displayed with respect to the baseline CT scan images in 2D or 3D to provide visual feedback to the clinician. The resulting augmented images are free of imaging artifacts and allow an unobstructed view of the target tissue and its surroundings. The accurate flexible needle location is of particular use for robotically driven needles to determine and adjust the needle insertion trajectory with substantially less radiation dose. 
+The key novelty of our method is the simultaneous tracking of a flexible needle and the registration of the patient location with respect to a baseline scan by fractional scanning, which precludes the reconstruction of the scanned image. The computed flexible needle location can be displayed with respect to the baseline CT scan images in 2D or 3D to provide visual feedback to the clinician. The resulting augmented images are free of imaging artifacts and allow an unobstructed view of the target tissue and its surroundings. The accurate flexible needle location is of particular use for robotically driven needles to determine and adjust the needle insertion trajectory with substantially less radiation dose. 
 
 Note that the spherical marker that is attached to the flexible needle is unobtrusive and does not add a burden to the intervention work flow since it only requires attaching a spherical marker to the flexible needle by the medical staff before the intervention. The potential ten-fold reduction in radiation dose is much more substantial than that of existing methods, i.e. about $times$2-3 of a full scan. 
 
@@ -310,6 +309,8 @@ Note that the spherical marker that is attached to the flexible needle is unobtr
 The scan field of view should include both the flexible needle and the spherical marker and should avoid in-plane needle insertion (an out-of-plane angle $>3^o$ suffices).
 
 {\em Study limitations:} the scope of our study is limited to several scans of an abdomen phantom. Fractional scanning is simulated from full scan data by omitting most of the repeat scan data used as input for the algorithm. To implement our method on a commercial CT scanner, fractional scanning can be achieved by fast modulation of the X-ray tube current and/or voltage, or by fast mechanical X-ray  collimation during scan acquisition. Fractional scanning can be realized by software (scanner controller), while collimation requires hardware development. Both are beyond the scope of this work.
+ 
+\textcolor{red}{Anatomical deformations in the on-line fractional CT scanning framework are addressed in ongoing work with our new fractional scanning 3D Radon space deformable registration method [28]. The method computes a deformation field by minimizing a general low-order parametric model in Radon space.  To increase the convergence range and efficiency of the optimization, our method relies on a Radon space version of the well-known image processing hierarchical pyramid approach.}
  
 \section*{Conclusions}
 We have presented a new method for flexible needle and patient localization in interventional CT procedures based on fractional CT scanning.
